--- a/deno.ipynb
+++ b/deno.ipynb
@@ -155,10 +155,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to connect to the database...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Promise { \u001b[36m<pending>\u001b[39m }"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import { MongoClient } from 'npm:mongodb'; // Specify version if needed\n",
+    "\n",
+    "const uri = \"mongodb://localhost:27017\";\n",
+    "const dbName = \"myDiscordBotDB\";\n",
+    "\n",
+    "const client = new MongoClient(uri);\n",
+    "\n",
+    "async function connectToDatabase() {\n",
+    "  try {\n",
+    "    console.log(\"Attempting to connect to the database...\");\n",
+    "    await client.connect();\n",
+    "    console.log(\"Connected to database\");\n",
+    "    const db = client.db(dbName);\n",
+    "    console.log(`Database: ${db.databaseName}`);\n",
+    "    // Use the database for operations\n",
+    "  } catch (error) {\n",
+    "    console.error(\"Database connection error:\", error);\n",
+    "  } finally {\n",
+    "    await client.close();\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "connectToDatabase();\n"
+   ]
   },
   {
    "cell_type": "code",
